Fixes number issue
Fixes issue with ol items numbers being cropped off. Jira ticket #1976

--- a/defaults/widgets/content.less
+++ b/defaults/widgets/content.less
@@ -3,5 +3,7 @@
 //======================
 
 .content {
-	// Nothing to add here...
+	.bk-content-text ol {
+		list-style-position: inside;
+	}
 }
